--- a/hello.ipynb
+++ b/hello.ipynb
@@ -29,14 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "*\n",
       "**\n",
       "***\n",
@@ -45,10 +44,16 @@
     }
    ],
    "source": [
-    "for i in range(0,5):\n",
-    "  print(\"*\"*i)\n",
-    "  i = i+1"
+    "for i in range(1,5):\n",
+    "  print(\"*\"*i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
